add bug sheet indexing
